# DBase

./: README.md
include/: DBase64.h  DErrCode.h  DError.h  DFile.h  DLoad.h  DLog.h  DMD5.h  DMisc.h  DTime.h
include/utils/: DLoad.h  DMD5.h
src/alogrithm/base64/: DBase64.cpp
src/alogrithm/safty/md5/: DMD5.c  DMD5.cpp
src/common/: DBase.cpp  DCommon.h  DErrCode.cpp  DError.cpp  DFile.cpp  DLog.cpp  DLogCommon.h  DLogInternal.h  DStd.h
src/common/android/: DAndroidApiLevel.h  DLoadAndroid.c  DLogAndroid.cpp  DMiscAndroid.c  DTimeAndroid.cpp
src/common/win32/: DLoadWin32.cpp  DLogWin32.cpp  DMiscWin32.cpp  DTimeWin32.cpp
test/android/app/: build.gradle
test/android/app/src/main/: AndroidManifest.xml
test/android/app/src/main/cpp/: CMakeLists.txt  hello-jni.c
test/win32/: DBaseTest.sln
test/win32/DBaseTest/: DBaseTest.cpp  DBaseTest.vcxproj  DBaseTest.vcxproj.filters  stdafx.cpp
